--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -139,6 +139,7 @@ These are only minimally documented at the present stage unfortunately.
 <li>Python (and MATLAB) interface
   <ul>
     <li>added GeneralisedPoissonNoiseGenerator</li>
+    <li>added the <code>Shape</code> classes</li>
   </ul>
 </li>
 <li>Projection- and normalisation-related classes have had changes to make them much safer to use in an interactive
