[SWIG] added Shaped and Prior classes, and generally ignore a few irrelevant members

--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -140,6 +140,7 @@ These are only minimally documented at the present stage unfortunately.
   <ul>
     <li>added GeneralisedPoissonNoiseGenerator</li>
     <li>added the <code>Shape</code> classes</li>
+    <li>added the <code>GeneralisedPrior</code> classes</li>
   </ul>
 </li>
 <li>Projection- and normalisation-related classes have had changes to make them much safer to use in an interactive
