edit_after_comments

--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -385,7 +385,7 @@ which is called by <code>LmToProjData</code> to check if the list mode format
 can handle the template.
   All derived classes of <code>CListEvent</code> will need to implement it.</li>
 <li>We removed <code>SeparableMetzArrayFilter::discrete_fourier_transform()</code>. Now <code>stir::fourier</code> is used. No need to comply with the Licence of "Numerical Recipies" anymore.</li>
-</li>
+</li> We added <code>SeparableGaussianArrayFilter</code> and <code>SeparableGaussianImageFilter</code>
 </ul>
 
 </body>
