add modality and patient position keywords to generate_image

--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -102,6 +102,7 @@ python/matlab or use of the C++ library.
 
 <h3>New functionality</h3>
 <ul>
+<li><tt>generate_image</tt> now has optional keywords for modality, patient position and timing.</li>
   <li><tt>create_projdata_template</tt> now allows even span. In particular,
 span 2 corresponds to how GE stores data. See the STIR glossary for more information.</li>
 <li>As mentioned above, many operations are now multi-threaded when you built with OPENMP support.
