add keyword to allow zooming of z-voxel size in reconstruction

--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -160,6 +160,11 @@ These are only minimally documented at the present stage unfortunately.
   </li>
 <li>Extract single images from dynamic image with executable <code>extract_dynamic_images</code>.
 </li>
+<li>Reconstruction parameter files now can use a new optional keyword <code>z zoom</code> to llow
+  changing the spacing from the default. However, results of this have not been checked yet.
+  It is currently only recommended for SPECT (where it should be set to <code>0.5</code> due
+  current work-arounds on how to read SPECT dat into STIR).
+  </li>
   </ul>
 
 
