--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -388,6 +388,11 @@ can handle the template.
 </li>
 </ul>
 
+<h3>Zoom Options</h3>
+<ul>
+<li>New functionality added to zoom_image. The user can now specify different types of zoom: preserve_values, preserve_projections, preserve_sum.</li>
+</ul>
+
 </body>
 
 </html>
