No longer require the user to supply a pre-existing parametric image
the changes concern `apply_patlak_to_images`

- If the output file already exists (first argument), use it as a template (same behaviour as before, doesn't break backwards compatibility)
- If the output does not exist, create the template based on the dynamic image

--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -176,6 +176,8 @@ These are only minimally documented at the present stage unfortunately.
   It is currently only recommended for SPECT (where it should be set to <code>0.5</code> due
   current work-arounds on how to read SPECT dat into STIR).
   </li>
+<li>Indirect parametric reconstruction (Patlak) no longer requires you to pass a pre-existing template file. If one is supplied, it will be used; else the parametric image will be created based on the dynamic image.
+  </li>
   </ul>
 
 
