--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -253,7 +253,13 @@ HFS, FFS, HFP or FFP).
 
 <h3>Build system</h3>
 <ul>
-<li>Also find the Python executable. This allows specifying your python version by
+  <li>MATLAB support now uses CMake's own <a href="https://cmake.org/cmake/help/latest/module/FindMatlab.html">FindMatlab</a> module, as opposed to our own
+    code, which was out-of-date. Unfortunately, this uses different CMake variables.
+    In particular, <strong><tt>MATLAB_ROOT</tt> is now ignored. Use <tt>Matlab_ROOT_DIR</tt> instead</strong>.
+    In addition, CMake launches MATLAB to find out some settings, which on some
+    systems can be very slow.
+  </li>
+  <li>Also find the Python executable. This allows specifying your python version by
 defining <code>PYTHON_EXECUTABLE</code> when running CMake.</li>
 <li>added (advanced) options <code>STIR_USE_BOOST_SHARED_PTR</code> and <code>STIR_NO_UNIQUE_PTR</code>.
 These default to <code>Off</code> unless Boost believes that your compiler does not have a working
