list_ROI_values save image name in a new column

--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -343,14 +343,18 @@ from the above):</H2>
 
 <h3>Backward incompatibities</h3>
 <ul>
-  <li>STIR now uses <code>std::unique_ptr</code> as opposed to <code>std::auto_ptr</code>, as recommended for C++-11 and 
+
+<li> <code>list_ROI_values</code> now saves the image name as a new column, and the image name will appear in the same 
+    row as the roi name, mean value and son on. 
+</li>
+<li>STIR now uses <code>std::unique_ptr</code> as opposed to <code>std::auto_ptr</code>, as recommended for C++-11 and 
     later (unless the CMake option <code>STIR_NO_UNIQUE_PTR</code> is set).
     This affects calls to
     <code>read_from_file</code> and <code>DataSymmetriesForBins::find_symmetry_operation_from_basic_bin</code> etc.
     You should normally just be able to do a simple find-and-replace.<br />
     Note that if <code>std::unique_ptr</code> is not defined for your compiler (and compilation flags), STIR
     will try to work-around this (see src/include/stir/unique_ptr.h). 
-  </li>
+</li>
 <li>Make <code>stir::shared_ptr</code> to be <code>std::shared_ptr</code>
   (stick to <code>boost::shared_ptr</code> if the CMake option <code>STIR_USE_BOOST_SHARED_PTR</code>
   is set, i.e. normally when <code>BOOST_NO_CXX11_SMART_PTR</code>
