--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -345,7 +345,7 @@ from the above):</H2>
 <ul>
 
 <li> <code>list_ROI_values</code> now saves the image name as a new column, and the image name will appear in the same 
-    row as the roi name, mean value and son on. 
+    row as the roi name, mean value and so on. 
 </li>
 <li>STIR now uses <code>std::unique_ptr</code> as opposed to <code>std::auto_ptr</code>, as recommended for C++-11 and 
     later (unless the CMake option <code>STIR_NO_UNIQUE_PTR</code> is set).
