--- a/documentation/release_3.1.htm
+++ b/documentation/release_3.1.htm
@@ -344,7 +344,7 @@ from the above):</H2>
 <h3>Backward incompatibities</h3>
 <ul>
 
-<li> <tt>list_ROI_values</tt> now saves the image name as a new column, and the image name will appear in the same 
+<li> <tt>list_ROI_values</tt> now has the option to save the image name , max and min as new columns, and they will appear in the same 
     row as the roi name, mean value and so on. 
 </li>
 <li>STIR now uses <code>std::unique_ptr</code> as opposed to <code>std::auto_ptr</code>, as recommended for C++-11 and 
