changed version to 4.0 (alpha)

--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>Summary of changes in STIR release 3.1 (dated 15/01/2018)</title>
+    <title>Summary of changes in STIR release 4.0-alpha (dated 19/10/2019)</title>
   </head>
 
   <body>
-    <h1>Summary of changes in STIR release 3.1 (dated 15/01/2018)</h1>
+    <h1>Summary of changes in STIR release 4.0-alpha (dated 19/10/2019)</h1>
 
 <p>This version is 95% backwards compatible with STIR 3.0 for the user (see below).
 Developers might need to make code changes as 
