Set verbosity from parameter file
Had to change printing of segment number to info level 2, otherwise the only way to disable was to have no output at all. Therefore changed the default verbosity to two.

--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -195,6 +195,9 @@ These are only minimally documented at the present stage unfortunately.
   </li>
 <li>Indirect parametric reconstruction (Patlak) no longer requires you to pass a pre-existing template file. If one is supplied, it will be used; else the parametric image will be created based on the dynamic image.
   </li>
+  <li>Verbosity can be set in reconstructions with the "verbosity := " keyword
+    in the parameter file.
+  </li>
   </ul>
 
 
