--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -51,7 +51,7 @@ for Siemens scanners (warning: tested in Biograph mMR only at present).
 on Linux/MacOSX and 3.10.2 or later on Windows, but we try to accomodate older versions of CMake.
 </p>
     
-<p>We now support the parsing of SIEMENS Interfile files natively.</p>
+<p>We now support the parsing of SIEMENS Interfile files natively, except for images. You still have to use convertSiemensInterfileToSTIR.sh for those.</p>
 
 <p>Finally, we now keep track of time frames and patient orientation for images, in particular
    making sure that reconstructions initialise this information from the projection data (if it
