fix invert axis and SPECT test

--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -201,6 +201,10 @@ These are only minimally documented at the present stage unfortunately.
   <li><code>ctac_to_mu_values</code> is a new utility that converts a CT image to linear attenuation coefficients.
       This application depends on the <a href="https://github.com/nlohmann/json">nlohmann JSON library</a>.
   </li>
+  <li>New utility <code>invert_axis</code> to invert x, y or z axis of an image.
+  </li>
+  <li>List-Mode functionalities are now extended for SPECT.
+  </li>
   </ul>
 
 
