--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -66,7 +66,7 @@ improvements to the documentation.
   and Richard Brown (UCL)
   but with contributions by Jannis Fischer (ETH Zurich) for SAFIR support,
   Elise Emond for IO fixes (UCL), Edoardo Pasca (STFC) for Siemens interfile support,
-  Daniel Deida (Leeds) for the PLS prior, Ashley Gillman (CSIRO AeHRC) for patient orientation and
+  Daniel Deida (Leeds, NPL) for the PLS prior, the HKEM algorithm, and list mode fo SPECT, Ashley Gillman (CSIRO AeHRC) for patient orientation and
   geometrical support, and some code clean-up by David Volgyes. Various bits
 were tested by (in alphabetical order, all UCL except where indicated):
 Ottavia Bertolli, Matthias Ehrhardt, Pawel Markiewicz, Richard Manber, Alaleh Rashidnasab,
