--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -218,6 +218,9 @@ These are only minimally documented at the present stage unfortunately.
 
 <h3>Changed functionality</h3>
 <ul>
+<li><tt>manip_image</tt> 
+    now has an extra option that allows to substitute nan with zero.
+</li>
 <li><tt>create_projdata_template</tt> 
     now returns an extra segment pair if the maximum ring difference does not coincide with a &quot;full&quot; segment.
     This change was to accomodate how GE uses even span.
