--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -133,10 +133,10 @@ python/matlab or use of the C++ library.
 
 <h3>New functionality</h3>
 <ul>
-<li><tt>KOSMAPOSL</tt> STIR now allows to use the hybrid kernel method described in the following paper: "Hybrid PET-MR list-mode kernelized expectation maximization reconstruction",
+<li><tt>KOSMAPOSL</tt> STIR now allows to use the hybrid kernel method described in the following paper: "<i>Hybrid PET-MR list-mode kernelized expectation maximization reconstruction</i>",
   Inverse Problems, 2019, DOI: https://doi.org/10.1088/1361-6420/ab013f.</li>
-<li><tt>KOSMAPOSL</tt> also allows to use multiple anatomical images. The method is described in "Multiplexing Kernelized Expectation Maximization
-Reconstruction for PET-MR", NSS/MIC proceedings, 2018, DOI: https://doi.org/10.1109/NSSMIC.2018.8824312.
+<li><tt>KOSMAPOSL</tt> also allows to use multiple anatomical images. The method is described in "<i>Multiplexing Kernelized Expectation Maximization
+Reconstruction for PET-MR</i>", NSS/MIC proceedings, 2018, DOI: https://doi.org/10.1109/NSSMIC.2018.8824312.
   </li>
 <li><tt>generate_image</tt> now has optional keywords for modality, patient position and timing.</li>
   <li><tt>create_projdata_template</tt> now allows even span. In particular,
