Change treatment of vectorised keys in KeyParser (backwards incompatible)
KeyParser did not store if a key is vectorised or not, but just assumed
that the stream it parsed was correct. This led to segmentation faults when
the stream used a vectorised key when KeyParser did not expect it, or vice versa.

This commit forces the developer to explicitly say what the level of vectorisation
is for a certain keyword (i.e. key, key[1], or key[1][1]).

This means that the change is backwards incompatible.

Classes using KeyParser have been rewritten to use the "shorter" form
of `add_key`, such that the vectorisation can be found by type-matching.

Also introduced a new `ignore_key()` member to make things more concise.

Fixes #148

--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -440,6 +440,10 @@ from the above):</H2>
         This is because the class only exists for the parser to get information about the class.</li>
   </ul>
 </li>
+ <li><code>KeyParser</code> <a href="https://github.com/UCL/STIR/pull/490">has changed</a> to be safer for
+   parsing of vectorised keys. However, the &quot;simple&quot; <code>add_key</code>
+   functions now create non-vectorised keys. Use <code>add_vectorised_key</code> otherwise.
+   </li>
 </ul>
 
 <h3>New functionality</h3>
