added options to list_image_values
New options for output in LPS, CSV format, and suppress first line.
Default is same behaviour as before (although with an extra space)

--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -155,6 +155,7 @@ These are only minimally documented at the present stage unfortunately.
 </li>
 <li>We now include a shell script for easier scatter estimation.</li>
 <li><tt>list_image_info</tt> now has options to list exam info, or only part of the information (as <tt>list_projdata_info</tt>).</li>
+<li><tt>list_image_values</tt> now has options to print coordinates in LPS as opposed to indices, print in CSV, or suppress the title row.</li>
 <li><tt>list_lm_countrates</tt> is a new list mode utility to output total counts per specified time interval.</li>
 <li>List-mode classes for Siemens ECAT8 (32-bit).</li>
 <li>add Verbosity level (currently only to be set from interactive languages)</li>
