InterfileHeader now checks version for energy window keys
- introduced a new member set_version_specific_keys in MinimalInterfileHeader
- use this to set "old-style" non-vectorised keys for energy windows when
the version_of_keys is STIR3.0

This makes sure that we can still read older Interfile headers.

Also updates Interfile headers that use energy window info

--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -511,7 +511,11 @@ using the default output file format.</li>
     energy window lower level:=425
     energy window upper level:=650
   </pre>
-  This will now result in an error. The new version is compatible with the Interfile standard.
+  This will still be read ok, as long as these keywords are preceded by
+  <pre>
+    !version of keys := STIR3.0
+  </pre>
+  The new (vectored) version is compatible with the Interfile standard.
 </li>
 <li> Information on a single energy window has been added in the <code>ExamInfo</code>. </li>
 <li><code>ExamData</code> is a new base class for <code>ProjData</code>, <code>CListModeData</code>,
