--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -20,7 +20,7 @@
         <li>Nikos Efthimiou (UCL and Hull) for the scatter update, list mode reconstruction, ROOT support etc</li>
         <li>Richard Brown (UCL) for improving code structure and safety (e.g. projectors, normalisation, <code>set_up</code> checks),
           IO additions, handling of dynamic data</li>
-        <li>Daniel Deida (Leeds and NPL) for the PLS prior, the HKEM algorithm, and list mode and projection functionalities for SPECT</li>
+        <li>Daniel Deidda (Leeds and NPL) for the PLS prior, the HKEM algorithm, and list mode and projection functionalities for SPECT</li>
       <li>Ashley Gillman (CSIRO AeHRC) for patient orientation and  geometrical support</li>
       </ul>
       but with contributions by Jannis Fischer (ETH Zurich) for SAFIR support,
