updated history.htm [ci skip]

--- a/documentation/history.htm
+++ b/documentation/history.htm
@@ -11,7 +11,9 @@
 The following links give you a summary what has changed. However,
 the ChangeLog is the definite (but tedious) information.
 <ul >
-<li><a href="release_2.4.htm">version 2.4a (dated 25 June 2013)</a>
+<li><a href="release_4.0.0.htm">version 4.0.0 (dated 22 April 2020)</a>
+<li><a href="release_3.0.htm">version 3.0 (dated 25 April 2014)</a>
+<li><a href="release_2.4.htm">version 2.4 (dated 07 August 2013)</a>
 <li><a href="release_2.3.htm">version 2.3 (dated 04 May 2013)</a>
 <li><a href="release_2.2.htm">version 2.2 (dated 20 February 2012)</a>
 <li><a href="release_2.1.htm">version 2.1 (dated 30 June 2011)</a>
@@ -36,7 +38,7 @@ the ChangeLog is the definite (but tedious) information.
 
 <!-- Created: Wed Jul 19 16:03:02 BST 2000 -->
 <!-- hhmts start -->
-Last modified: Mon Jun 24 23:31:58 BST 2013
+Last modified: Apr 22 2020
 <!-- hhmts end -->
   </body>
 </html>
