updated credits [ci skip]

--- a/documentation/credits.htm
+++ b/documentation/credits.htm
@@ -79,20 +79,44 @@ Thielemans, Kris</p>
    Some additional IO
    Tsoumpas, Charalampos
 
-10. University College London, UK
-   (2013-2014)
-   Some bug fixes, help with integration and general maintenance
-   Thielemans, Kris
-
-11. University of Barcelona, Spain
+10. University of Barcelona, Spain
    (2013)
    SPECT projector matrix 
    Falc&oacute;n, Carl&eacute;s
 
-12. Institute for Bioengineering of Catalonia, Spain
+11. Institute for Bioengineering of Catalonia, Spain
     (2013)
     Integration of SPECT UB code into STIR, SPECT Interfile IO, ITK IO.
     Mart&iacute; Fuster, Berta
+
+12. University of Hull, UK
+    (2017-2019)
+    scatter updates, list mode reconstruction, ROOT support etc
+    Efthimiou, Nikos
+
+13. CSIRO AeHRC
+    patient orientation and  geometrical support
+    Gillman, Ashley
+
+14. University of Leeds, UK
+    HKEM implementation
+    Deidda, Daniel
+
+15. National Physical Laboratory, UK
+    HKEM improvements, list mode and projection functionalities for SPECT
+    Deidda, Daniel
+
+16. University College London, UK
+    (2013-2020)
+    scatter updates, dynamic data updates, OPENMP, PLS prior, Siemens ECAT8 support etc
+    help with integration and general maintenance
+    Brown, Richard
+    Efthimiou, Nikos
+    Tsai, Yu-jung
+    Emond, Elise
+    Thomas, Benjamin
+    Thielemans, Kris
+
 </pre>
 
 <h2>Contributors during the PARAPET EU project</h2>
