--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -25,8 +25,8 @@
       </ul>
       but with contributions by Jannis Fischer (ETH Zurich) for SAFIR support,
       Elise Emond (UCL) for IO fixes, Yu-jung Tsai (UCL) for implementation of the PLS prior,
-      Edoardo Pasca (STFC) for Siemens interfile support,
-      , and some code clean-up by David Volgyes.</p>
+      Edoardo Pasca (STFC) for Siemens interfile support, Benjamin Thomas (UCL) for CTAC to mu values and support on SPECT,
+      and some code clean-up by David Volgyes.</p>
     <p>Various bits were tested by (in alphabetical order, all UCL except where indicated):
       Ottavia Bertolli, Matthias Ehrhardt, Pawel Markiewicz, Richard Manber, Alaleh Rashidnasab,
       Benjamin Thomas (CIRC ASTAR and UCL), Yu-jung Tsai, Vesna Cuplov.
