Users guide and release notes

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -22,7 +22,9 @@
 
 <h3>New functionality</h3>
 <ul>
-  <li></li>
+  <li>
+    Addition of the Relative Difference Prior [J. Nuyts, et al., 2002].
+  </li>
 </ul>
 
 
