--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>Summary of changes in STIR release 4.0.0 (dated 22/04/2020)</title>
+    <title>Summary of changes in STIR release 4.0</title>
   </head>
 
   <body>
-    <h1>Summary of changes in STIR release 4.0.0 (dated 22/04/2020)</h1>
+    <h1>Summary of changes in STIR release 4.0</h1>
 <h2>Overall summary</h2>
 
     <p>This version is 95% backwards compatible with STIR 3.0 for the user (see below).
@@ -31,6 +31,19 @@
       Ottavia Bertolli, Matthias Ehrhardt, Pawel Markiewicz, Richard Manber, Alaleh Rashidnasab,
       Benjamin Thomas (CIRC ASTAR and UCL), Yu-jung Tsai, Vesna Cuplov.
     </p>
+
+    <h2>Patch release info</h2>
+    <ul>
+      <li> 4.0.0 released 22/04/2020</li>
+      <li> 4.0.1 released 28/04/2020
+        <ul>
+          <li><a href=https://github.com/UCL/STIR/pull/513>PR 513</a>  (suppress warnings with clang)</li>
+          <li><a href=https://github.com/UCL/STIR/issues/515>issue 515,  PR 516</a> (compilation problem with JSON present and <tt>BUILD_EXECUTABLES=OFF</tt>)</li>
+          <li><a href=https://github.com/UCL/STIR/issues/520>issue 520</a> (siemens mMR unlisting segfault)</li>
+          <li>typos in UsersGuide</li>
+          </ul>
+      </li>
+    </ul>
 
 <h2> Summary for end users (also to be read by developers)</h2>
 
