--- a/documentation/history.htm
+++ b/documentation/history.htm
@@ -11,26 +11,27 @@
 The following links give you a summary what has changed. However,
 the ChangeLog is the definite (but tedious) information.
 <ul >
-<li><a href="release_4.0.0.htm">version 4.0.0 (dated 22 April 2020)</a>
-<li><a href="release_3.0.htm">version 3.0 (dated 25 April 2014)</a>
-<li><a href="release_2.4.htm">version 2.4 (dated 07 August 2013)</a>
-<li><a href="release_2.3.htm">version 2.3 (dated 04 May 2013)</a>
-<li><a href="release_2.2.htm">version 2.2 (dated 20 February 2012)</a>
-<li><a href="release_2.1.htm">version 2.1 (dated 30 June 2011)</a>
-<li><a href="release_2.0.htm">version 2.0 (dated 21 June 2009)</a>
-<li><a href="release_1.4.htm">version 1.4 (dated 25 January 2006)</a>
-<li><a href="release_1.3.htm">version 1.3 (dated 25 November 2004)</a>
-<li><a href="release_1.2.htm">version 1.2 (dated 01 Apr 2004)</a>
-<li><a href="release_2003_06_26.htm">version 1.1 (dated 26 Jun 2003)</a>
-<li><a href="release_2001_12_20.htm">version 1.0 (dated 20 Dec 2001)</a>
+<li><a href="release_4.0.htm">version 4.0.1 (dated 28 April 2020)</a></li>
+<li><a href="release_4.0.htm">version 4.0.0 (dated 22 April 2020)</a></li>
+<li><a href="release_3.0.htm">version 3.0 (dated 25 April 2014)</a></li>
+<li><a href="release_2.4.htm">version 2.4 (dated 07 August 2013)</a></li>
+<li><a href="release_2.3.htm">version 2.3 (dated 04 May 2013)</a></li>
+<li><a href="release_2.2.htm">version 2.2 (dated 20 February 2012)</a></li>
+<li><a href="release_2.1.htm">version 2.1 (dated 30 June 2011)</a></li>
+<li><a href="release_2.0.htm">version 2.0 (dated 21 June 2009)</a></li>
+<li><a href="release_1.4.htm">version 1.4 (dated 25 January 2006)</a></li>
+<li><a href="release_1.3.htm">version 1.3 (dated 25 November 2004)</a></li>
+<li><a href="release_1.2.htm">version 1.2 (dated 01 Apr 2004)</a></li>
+<li><a href="release_2003_06_26.htm">version 1.1 (dated 26 Jun 2003)</a></li>
+<li><a href="release_2001_12_20.htm">version 1.0 (dated 20 Dec 2001)</a></li>
 </ul>
 
 
 <h1>History of public releases of the PARAPET software</h1>
 <ul>
-<li><a href="release_2001_01_12.htm">version 0.92 (dated 12 Jan 2001)</a>
-<li><a href="release_2000_07_19.htm">version 0.91 (dated 19 Jul 2000)</a>
-<li>version 0.9 (dated 22 Jun 2000)
+<li><a href="release_2001_01_12.htm">version 0.92 (dated 12 Jan 2001)</a></li>
+<li><a href="release_2000_07_19.htm">version 0.91 (dated 19 Jul 2000)</a></li>
+<li>version 0.9 (dated 22 Jun 2000)</li>
 </ul>
 
 
@@ -38,7 +39,7 @@ the ChangeLog is the definite (but tedious) information.
 
 <!-- Created: Wed Jul 19 16:03:02 BST 2000 -->
 <!-- hhmts start -->
-Last modified: Apr 22 2020
+Last modified: Apr 28 2020
 <!-- hhmts end -->
   </body>
 </html>
