--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -14,6 +14,7 @@
     <p>This release contains mainly code written by
       <ul>
         <li>Kris Thielemans (UCL) for general overview, fixes, help and maintenance</li>
+        <li>Richard Brown (UCL) for wrapping of NiftyPET's GPU functionality for projecting and unlisting</li>
       </ul>
     </p>
 
@@ -24,6 +25,10 @@
 <ul>
   <li>
     Addition of the Relative Difference Prior [J. Nuyts, et al., 2002].
+  </li>
+  <li>NiftyPET's GPU projectors have been wrapped. If NiftyPET is installed, these projectors can be used 
+    on data from the Siemens mMR. See the example parameter file in <tt>examples/samples/OSMAPOSL_NiftyPET.par</tt>.
+    NiftyPET's GPU-accelerated unlisting has also been wrapped, also allowing for randoms estimation and norm extraction.
   </li>
 </ul>
 
