fixed typos in release 4.1.htm [ci skip]

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -15,7 +15,7 @@
       <ul>
         <li>Kris Thielemans (UCL) for general overview, fixes, help and maintenance</li>
         <li>Richard Brown (UCL) for wrapping of NiftyPET's GPU functionality for projecting and unlisting</li>
-        <li>Robert Twyman (UCL) for Relative Differnce Prior and compuation log-likelihood modification</li>  
+        <li>Robert Twyman (UCL) for Relative Difference Prior and computation of the log-likelihood modification</li>  
       </ul>
     </p>
 
@@ -36,7 +36,7 @@
 
 <h3>Changed functionality</h3>
 <ul>
-<li>  Modification of log-likelihood computation to use doubles. </li>
+<li>  Modification of log-likelihood computation to use more doubles, improving numerical stability, see <a href="https://github.com/UCL/STIR/pull/528">PR 528</a>.</li>
 </ul>
 <h4>Python (and MATLAB) interface</h4>
 none
