update release notes for KOSMAPOSL

--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -104,6 +104,8 @@ python/matlab or use of the C++ library.
       <tt>KOSMAPOSL</tt> also allows to use multiple anatomical images. The method is described in<br />
       Deidda D, et al., <cite>Multiplexing Kernelized Expectation Maximization Reconstruction for PET-MR</cite><br />
       NSS/MIC proceedings, 2018, DOI: <a href=https://doi.org/10.1109/NSSMIC.2018.8824312>10.1109/NSSMIC.2018.8824312</a>.
+      <tt>KOSMAPOSL</tt> allows to use openMP for the kernel calculation.
+      <tt>KOSMAPOSL</tt> allows reconstruction without any anatomical image
     </li>
     <li>Image-based PSF-modelling in PET can be achieved by using projectors
       that first smooth data image before forward projection or after back projection.
