update release notes

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -108,7 +108,7 @@ from the above):</H2>
 <h3>New functionality</h3>
 
 <h3>Other code changes</h3>
-
+<li>estimate_triple_energy_window_scatter_sinogram can use different width for the upper and lower energy windows</li>
 </body>
 
 </html>
