updated release notes for 4.0.2 [ci skip]

--- a/documentation/release_4.0.htm
+++ b/documentation/release_4.0.htm
@@ -42,6 +42,10 @@
           <li><a href=https://github.com/UCL/STIR/issues/520>issue 520</a> (siemens mMR unlisting segfault)</li>
           <li>typos in UsersGuide</li>
           </ul>
+      <li> 4.0.2 released 22/05/2020
+        <ul>
+          <li><a href=https://github.com/UCL/STIR/pull/513>PR 540</a>  (KOSMAPOSL stability improvements and fixes in naming of class member function)</li>
+          </ul>
       </li>
     </ul>
 
