--- a/documentation/history.htm
+++ b/documentation/history.htm
@@ -11,6 +11,7 @@
 The following links give you a summary what has changed. However,
 the ChangeLog is the definite (but tedious) information.
 <ul >
+<li><a href="release_4.0.htm">version 4.0.2 (dated 22 May 2020)</a></li>
 <li><a href="release_4.0.htm">version 4.0.1 (dated 28 April 2020)</a></li>
 <li><a href="release_4.0.htm">version 4.0.0 (dated 22 April 2020)</a></li>
 <li><a href="release_3.0.htm">version 3.0 (dated 25 April 2014)</a></li>
