--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -49,6 +49,7 @@
 <h3>Changed functionality</h3>
 <ul>
 <li>  Modification of log-likelihood computation to use more doubles, improving numerical stability, see <a href="https://github.com/UCL/STIR/pull/528">PR 528</a>.</li>
+<li>Addition of <code>axpby</code> method for <code>ProjData</code>.</li>
 </ul>
 <h4>Python (and MATLAB) interface</h4>
 none
