Added a line to release_5.0 detailing demo [ci skip]

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -23,7 +23,7 @@ detailed below.
 improvements to the documentation.
 </p>
 
-<p>This release contains mainly code written by Kris Thielemans (UCL)  and Richard Brown (UCL).
+<p>This release contains mainly code written by Kris Thielemans (UCL), Richard Brown (UCL), and Robert Twyman (UCL).
 </p>
 
     <h2>Patch release info</h2>
@@ -54,6 +54,8 @@ improvements to the documentation.
 <h3>New functionality</h3>
 <ul>
 <li>
+      Additional demo demonstrating the use the objective function and gradient ascent optimisation, see <tt>examples/src/demo4_obj_fun.cxx</tt>.
+  </li>
 </li>
 </ul>
 
