--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -128,7 +128,10 @@ from the above):</H2>
 </ul>
 
 <h3>New functionality</h3>
-
+<ul>
+  <li>Addition of <code>axpby</code> method for <code>ProjData</code>.</li>
+</ul>
+  
 <h3>Other code changes</h3>
 <li>estimate_triple_energy_window_scatter_sinogram can use different width for the upper and lower energy windows</li>
 </body>
