--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -129,7 +129,8 @@ from the above):</H2>
 
 <h3>New functionality</h3>
 <ul>
-  <li>Addition of <code>axpby</code> method for <code>ProjData</code>.</li>
+  <li>Addition of <code>axpby</code> method for <code>Array</code> and all inherited classes.</li>
+  <li><code>ProjDataInMemory</code> now provides iterators.</li>
 </ul>
   
 <h3>Other code changes</h3>
