Gate/root cylindrical PET geometry fixes (#569)
* Modified STIR's interpretation of GATE cylindrical PET geometries to be consistent with rsector/module/submodule/crystal <-> ../bucket/block/crystal
* Adds View_offset and default_num_arccorrected_bins to .hroot files
* updated UsersGuide.tex and sample .hroot files

Co-authored-by: Kris Thielemans <k.thielemans@ucl.ac.uk>

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -24,7 +24,7 @@
           DOI: <a href=https://doi.org/10.1016/j.ymeth.2020.01.005>10.1016/j.ymeth.2020.01.005</a>
         </li>
         <li>Richard Brown (UCL) for wrapping of NiftyPET's GPU functionality for projecting and unlisting</li>
-        <li>Robert Twyman (UCL) for Relative Difference Prior and computation of the log-likelihood modification</li>  
+        <li>Robert Twyman (UCL) for Relative Difference Prior, computation of the log-likelihood modification, and GATE geometry check fixes. </li>  
       </ul>
     </p>
 
@@ -97,6 +97,8 @@ We have currently no work-around (aside from using <code>GRAPHICS=PGM</code> or
 <h3>Minor bug fixes</h3>
 <ul>
 <li>
+  Changes to GATE/root cylindrical PET geometry interpretation,
+  see <a href="https://github.com/UCL/STIR/pull/569">PR 569</a>.</li>
 </li>
 </ul>
 
