--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -137,6 +137,7 @@ from the above):</H2>
 <ul>
   <li>Addition of <code>axpby</code> method for <code>Array</code> and all inherited classes.</li>
   <li><code>ProjDataInMemory</code> now provides iterators.</li>
+  <li>added <code>get_sinograms()</code> and <code>size_all()</code> to <code>ProjDataInfo</code></li>
 </ul>
   
 <h3>Other code changes</h3>
