--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -28,6 +28,8 @@
       </ul>
     </p>
 
+    <p>See also the <a href="https://github.com/UCL/STIR/milestone/3">GitHub milestone for v4.1</a></p>
+
 <h2> Summary for end users (also to be read by developers)</h2>
 
 
@@ -43,6 +45,7 @@
     on data from the Siemens mMR. See the example parameter file in <tt>examples/samples/OSMAPOSL_NiftyPET.par</tt>.
     NiftyPET's GPU-accelerated unlisting has also been wrapped, also allowing for randoms estimation and norm extraction.
   </li>
+<li><tt>estimate_triple_energy_window_scatter_sinogram</tt> can use different width for the upper and lower energy windows</li>
 </ul>
 
 
@@ -142,7 +145,8 @@ from the above):</H2>
 </ul>
   
 <h3>Other code changes</h3>
-<li>estimate_triple_energy_window_scatter_sinogram can use different width for the upper and lower energy windows</li>
+<p>See the ChangeLog</p>
+
 </body>
 
 </html>
