update release_5.0.htm [ci skip]

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -62,7 +62,7 @@ improvements to the documentation.
 
 <h3>Changed functionality</h3>
 <ul>
-<li>
+<li> Updates to the experimental version of the Poisson loglikelihood function that uses gated projection data, and accounts for motion. There are two versions of this objective function. The experimental version performs the adjoint with regards to image resampling, which is preferable for MCIR.
 </li>
 </ul>
 
